--- a/SimpleStickyNote/src/stickynote/WriteForm.form
+++ b/SimpleStickyNote/src/stickynote/WriteForm.form
@@ -48,7 +48,7 @@
                   <Component id="rtlbtn" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="271" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="247" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -80,7 +80,7 @@
     <Component class="javax.swing.JButton" name="zoomin">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/stickynote/+.png"/>
+          <Image iconType="3" name="/stickynote/icons/+.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Zoom in"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
@@ -96,7 +96,7 @@
     <Component class="javax.swing.JButton" name="zoomout">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/stickynote/-.png"/>
+          <Image iconType="3" name="/stickynote/icons/-.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Zoom out"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
@@ -112,7 +112,7 @@
     <Component class="javax.swing.JButton" name="ltrbtn">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/stickynote/ltr.png"/>
+          <Image iconType="3" name="/stickynote/icons/ltr.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Left to right"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
@@ -129,7 +129,7 @@
     <Component class="javax.swing.JButton" name="rtlbtn">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/stickynote/rtl.png"/>
+          <Image iconType="3" name="/stickynote/icons/rtl.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value="Right to left"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
